# libtypescript

./: .gitignore  CMakeLists.txt  Cargo.toml  a.js
include/: typescript_compiler.h
src/: lib.rs
test/: main.c
